kubernetes/apps/external-services/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-services
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
