kubernetes/apps/external-services/adguardhome.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: adguardhome-service
  labels:
    kubernetes.io/service-name: adguardhome-service
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.10.53
ports:
  - name: http
    port: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguardhome-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-internal
  routes:
    - match: Host(`adguardhome.home.lungoo.de`)
      kind: Rule
      services:
        - name: adguardhome-service
          port: 80
