kubernetes/apps/external-services/home-assistant.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-service
  labels:
    kubernetes.io/service-name: home-assistant-service
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.10.20
ports:
  - name: http
    port: 8123
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`home-assistant.home.lungoo.de`)
      kind: Rule
      services:
        - name: home-assistant-service
          port: 8123
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: music-assistant-service
  labels:
    kubernetes.io/service-name: music-assistant-service
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.10.20
ports:
  - name: http
    port: 8095
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8095
      protocol: TCP
      targetPort: 8095
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: music-assistant-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`music-assistant.home.lungoo.de`)
      kind: Rule
      services:
        - name: music-assistant-service
          port: 8095
