kubernetes/apps/external-services/pbs.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pbs-service
  labels:
    kubernetes.io/service-name: pbs-service
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.10.81
ports:
  - name: https
    port: 8007
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pbs-service
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 8007
      protocol: TCP
      targetPort: 8007
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pbs-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`pbs.home.lungoo.de`)
      kind: Rule
      services:
        - name: pbs-service
          port: 8007
          scheme: https
          serversTransport: pbs-transport
