kubernetes/apps/external-services/synology.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: synology-service
  labels:
    kubernetes.io/service-name: synology-service
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.20.10
ports:
  - name: https
    port: 5001
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: synology-service
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 5001
      protocol: TCP
      targetPort: 5001
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synology-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-external
  routes:
    - match: Host(`synology.home.lungoo.de`)
      kind: Rule
      services:
        - name: synology-service
          port: 5001
          scheme: https
          serversTransport: synology-transport
